# OMP-Wizard

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
